fixed goToTop button z-index

--- a/client/src/style/components/_goToTop.scss
+++ b/client/src/style/components/_goToTop.scss
@@ -22,6 +22,7 @@
   font-size: 45px;
   border-radius: 50%;
   transition: 0.5s opacity;
+  z-index: 1070;
   i {
     position: absolute;
     top: 0;
